# quickjs

./: .gitignore  CMakeLists.txt  Changelog  Makefile  README.md  TODO  cutils.c  cutils.h  dtoa.c  libbf.c  libbf.h  libregexp.c  qjs.c  qjsc.c  quickjs-libc.c  quickjs.c  quickjs.h  release.sh  run-test262.c  win_patch.c  win_patch.h
.codex/skills/quickjs-upstream-merge/: SKILL.md
.codex/skills/quickjs-upstream-merge/agents/: openai.yaml
.github/workflows/: ci.yml
doc/: quickjs.texi
fuzz/: fuzz_bytecode.c  fuzz_json.c  fuzz_module_export.c  fuzz_regexp_compile.c
tests/: microbench.js  test_rw_handler.js  test_std.js
